static/style.css
.placeholder{
    background-color: grey;
    height: 50vw;
    width: 50vw
}
img{
    width: 20vw
}

.wrapper{
    text-align: center;
    padding-left: 10vw;
    padding-right: 10vw;
}

.diagram-cont{
    display: flex;
    justify-content: space-around;
    margin-left: -5vw;
    width: 90vw;    
}

.caption{
    font-size: 15px;
}

.takeaway{
    font-size: 20px;
}
.topthing{
    margin-top:7vh;
}

